opam-version: "2.0"
name: "satysfi-fonts-geolab"
version: "1+satysfi0.0.3+satyrograhos0.0.1"
synopsis: "SATySFi Font Package for GeoLab's Georgian fonts"
description: """
SATySFi Font Package for GeoLab's Georgian fonts

This package installs fonts from https://fonts.ge/en/pack/41/GeoLab-fonts
"""
maintainer: "SAKAMOTO Noriaki <mrty.ityt.pt@gmail.com>"
authors: "SAKAMOTO Noriaki <mrty.ityt.pt@gmail.com>"
license: "OFL"
homepage: "https://github.com/na4zagin3/SATySFi-fonts-geolab"
bug-reports: "https://github.com/na4zagin3/SATySFi-fonts-geolab/issues"
dev-repo: "git+https://github.com/na4zagin3/SATySFi-fonts-geolab.git"
extra-source "geolab-fonts.zip" {
  archive: "https://fonts.ge/en/download/pack/41/GeoLab-fonts"
  checksum: [
    "sha256=672cd43dcdf2f6b8bed1b7c06d686834f4001f1ef2ff159f3e5d86b22becd34c"
    "sha512=0130a8cd31e522a7f6b9d30820ee86f5f294d0924d1a60f68b906150d2201afe131d8b23624dafea0406e84b0b415237e5bb09c99af7f42facd2146f6b321710"
  ]
}
depends: [
  "satysfi" {>= "0.0.3" & < "0.0.4"}
  "satyrographos" {>= "0.0.1" & < "0.0.2"}
]
build: [
  ["unzip" "-o" "geolab-fonts.zip" "*.ttf" "-d" "geolab-fonts"]
]
install: [
  [make "-f" "Makefile" "install" "PREFIX=%{prefix}%"]
]
remove: [
  [make "-f" "Makefile" "uninstall" "PREFIX=%{prefix}%"]
]
